fixed some issues, before working dynamic scale

--- a/src/admin/js/react/components/invoice/invoice-single/style.scoped.scss
+++ b/src/admin/js/react/components/invoice/invoice-single/style.scoped.scss
@@ -241,7 +241,7 @@
   border: 1px solid var(--border-color-gray);
 }
 .ncpi .pi-group-form .pi-buttons .pi-a-btn {
-  margin-top: 130px !important;
+  // margin-top: 130px !important;
   float: right;
   border-radius: 12px;
   border: 1px solid var(--border-color-gray);
