--- a/src/admin/js/react/components/payment/style.scoped.scss
+++ b/src/admin/js/react/components/payment/style.scoped.scss
@@ -105,14 +105,14 @@
 .ncpi .pi-payment-tab-content ul li .pi-edit span:hover svg path {
   fill: var(--bg-color-blue);
 }
-.ncpi .pi-payment-tab-content ul li .bank-text-content {
+.ncpi .pi-payment-tab-content ul li .payment-text-content {
   margin-left: 20px;
 }
-.ncpi .pi-payment-tab-content ul li .bank-text-content .pi-bank-title {
+.ncpi .pi-payment-tab-content ul li .payment-text-content .pi-payment-title {
   font-size: 18px;
   font-weight: 600;
 }
-.ncpi .pi-payment-tab-content ul li .bank-text-content .pi-bank-subtitle {
+.ncpi .pi-payment-tab-content ul li .payment-text-content .pi-bank-subtitle {
   font-size: 15px;
   font-weight: 500;
 }
