--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -22,12 +22,13 @@
     padding: 20px 30px 40px;
     height: auto !important;
 }
-
 .pi-field-desc {
     line-height: 1.4;
     margin-top: 2px;
 }
-
+.ncpi .pi-info-logo img, .pi-inv .pi-from-logo img {
+    max-width: 200px !important;
+}
 //TODO: temporary css
 h4.from-title {
     font-family: "Inter", sans-serif !important;
@@ -39,24 +40,26 @@ h4.from-title {
 .ncpi .pi-form-style-two label {
     z-index: 99;
 }
-.pi-inv {
+.ncpi-invoice-preview  {
     border: 1px solid #dfdfdf; 
+    margin: auto;
+    display: table;
 }
 .ncpi .pi-from-content .pi-from {
     margin-top: 10px;
 }
 
 .pi-inv-sidebar-preview {
-    -moz-transform: scale(0.45);
-    -webkit-transform: scale(0.45);
-    -o-transform: scale(0.45);
-    -ms-transform: scale(0.45);
-    transform: scale(0.45);
+    -moz-transform: scale(0.48);
+    -webkit-transform: scale(0.48);
+    -o-transform: scale(0.48);
+    -ms-transform: scale(0.48);
+    transform: scale(0.48);
     transform-origin: left top; 
     // height: 344px;
-    .pi-inv {
+    /* .pi-inv {
         width: 740px;
-    }
+    } */
 }
 
 .wp-admin .pi-left-sidebar {
