dymic scale added

--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -50,11 +50,11 @@ h4.from-title {
 }
 
 .pi-inv-sidebar-preview {
-    -moz-transform: scale(0.48);
-    -webkit-transform: scale(0.48);
-    -o-transform: scale(0.48);
-    -ms-transform: scale(0.48);
-    transform: scale(0.48);
+    // -moz-transform: scale(0.48);
+    // -webkit-transform: scale(0.48);
+    // -o-transform: scale(0.48);
+    // -ms-transform: scale(0.48);
+    // transform: scale(0.48);
     transform-origin: left top; 
     // height: 344px;
     /* .pi-inv {
