--- a/src/admin/js/react/inv-template/scss/4.scoped.scss
+++ b/src/admin/js/react/inv-template/scss/4.scoped.scss
@@ -1,88 +1,57 @@
 :root {
-  --pi-inv-primary: #8EB538;
-  --pi-inv-secondary: #424449;
-  --pi-inv-even: #EDF2F5;
-  --pi-inv-odd: #8db53818;
+  --pi-inv-primary: #D7CA9C;
+  --pi-inv-secondary: #F7FAFC;
+  --pi-inv-even: #EDF2F7;
 }
 
 .pi-inv {
-  /* ====template four===*/
+  /* ====template five===*/
 }
-.pi-inv .pi-inv-four .pi-body {
-  margin: 0 35px;
+.pi-inv .pi-inv-five .pi-body {
+  margin: -90px 35px;
 }
-.pi-inv .pi-inv-four .pi-bg-one {
-  background-color: var(--pi-inv-primary);
-}
-.pi-inv .pi-inv-four .pi-bg-two {
-  background-color: var(--pi-inv-secondary);
-}
-.pi-inv .pi-inv-four .pi-bg-4th {
-  background-color: var(--pi-inv-text-4th);
-}
-.pi-inv .pi-inv-four .pi-hedear {
+.pi-inv .pi-inv-five .pi-hedear {
+  margin-top: 10px;
   display: flex;
   justify-content: space-between;
-  padding-top: 53px;
 }
-.pi-inv .pi-inv-four .pi-to {
-  margin-top: -30px;
+.pi-inv .pi-inv-five .pi-hedear .pi-inv-title {
+  margin-top: -45px;
 }
-.pi-inv .pi-inv-four .pi-to-bg {
-  margin-right: -36px;
-  padding: 16px 36px 16px 20px;
+.pi-inv .pi-inv-five .pi-top-shape svg {
+  width: 100%;
+  fill: var(--pi-inv-primary);
 }
-.pi-inv .pi-inv-four .pi-to-bg address {
+.pi-inv .pi-inv-five .pi-footer-shape svg {
+  fill: var(--pi-inv-primary);
+  display: block;
+}
+.pi-inv .pi-inv-five .pi-items-table table thead {
+  background-color: var(--pi-inv-primary);
   color: var(--pi-inv-white);
 }
-.pi-inv .pi-inv-four .pi-to-bg p {
-  color: var(--pi-inv-white);
-}
-.pi-inv .pi-inv-four .pi-to-bg h6 {
-  color: var(--pi-inv-white);
-}
-.pi-inv .pi-inv-four .pi-items-table table {
-  width: 106%;
-  margin-left: -23px;
-}
-.pi-inv .pi-inv-four .pi-items-table table thead th {
-  color: var(--pi-inv-white);
-  padding-left: 20px;
-}
-.pi-inv .pi-inv-four .pi-items-table table td {
-  padding-left: 20px;
-}
-.pi-inv .pi-inv-four .pi-items-table table tbody tr:nth-child(even) {
-  background-color: var(--pi-inv-odd);
-}
-.pi-inv .pi-inv-four .pi-items-table table tbody tr:nth-child(odd) {
+.pi-inv .pi-inv-five .pi-items-table table tbody tr:nth-child(even) {
   background-color: var(--pi-inv-even);
 }
-.pi-inv .pi-inv-four tr.pi-table-bg {
+.pi-inv .pi-inv-five .pi-items-table table tbody tr:nth-child(odd) {
+  background-color: var(--pi-inv-secondary);
+}
+.pi-inv .pi-inv-five tr.pi-table-bg {
   background-color: var(--pi-inv-primary);
 }
-.pi-inv .pi-inv-four tr.pi-table-bg :last-child {
-  margin-right: -35px;
-  display: block;
-  padding: 10px 20px;
-  margin-left: -20px;
-  background-color: var(--pi-inv-primary);
+.pi-inv .pi-inv-five .pi-inv-title h2 {
+  text-align: center;
 }
-.pi-inv .pi-inv-four .pi-footer-shape {
-  display: flex;
-  margin-top: 40px;
+@media screen and (max-width: 700px) {
+  .pi-inv .pi-inv-five .pi-top-shape svg {
+    padding-bottom: 30px;
+  }
+  .pi-inv .pi-inv-five .pi-footer-shape svg {
+    padding-top: 30px;
+  }
 }
-.pi-inv .pi-inv-four .pi-footer-shape .pi-shape1 {
-  width: 33.3%;
-  height: 10px;
-}
-.pi-inv .pi-inv-four .pi-footer-shape .pi-shape2 {
-  width: 33.3%;
-  opacity: 0.8;
-  height: 10px;
-}
-.pi-inv .pi-inv-four .pi-footer-shape .pi-shape3 {
-  width: 33.4%;
-  opacity: 0.6;
-  height: 10px;
+@media screen and (max-width: 500px) {
+  .pi-inv .pi-inv-five .pi-top-shape svg {
+    padding-bottom: 50px;
+  }
 }
