--- a/src/admin/js/react/inv-template/scss/3.scoped.scss
+++ b/src/admin/js/react/inv-template/scss/3.scoped.scss
@@ -1,10 +1,3 @@
-:root {
-  --pi-inv-primary: #4C6FFF;
-  --pi-inv-secondary: #cadffa;
-  --pi-inv-even: #EDF2F7;
-  --pi-inv-odd: #e4e4e8aa;
-}
-
 .pi-inv {
   /* ====template three===*/
 }
@@ -47,14 +40,10 @@
   fill: var(--pi-inv-primary);
 }
 .pi-inv .pi-inv-three .pi-inv-title h2 {
-  color: var(--pi-inv-primary);
   text-align: center;
 }
-.pi-inv .pi-items-table table thead th {
-  color: #000;
-}
 .pi-inv .pi-inv-three .pi-items-table table thead {
-  background-color: var(--pi-inv-secondary);
+  background-color: var(--pi-inv-primary);
 }
 .pi-inv .pi-inv-three .pi-items-table table tbody tr:nth-child(even) {
   background-color: var(--pi-inv-even);
@@ -66,7 +55,7 @@
   background-color: var(--pi-inv-primary);
 }
 .pi-inv .pi-inv-three .pi-footer-shape {
-  position: relative;
+  position: absolute;
   right: 34px;
   bottom: 0;
   transform: rotate(180deg);
