fixed dynamic issues

--- a/src/admin/js/react/inv-template/scss/all.scoped.scss
+++ b/src/admin/js/react/inv-template/scss/all.scoped.scss
@@ -14,11 +14,10 @@
 }
 
 .pi-inv {
-  width: 210mm;
-  height: 296mm;
+  width: 794px;
+  height: 1120px;
   overflow: hidden;
-  // max-width: 794px;
-  // margin: 0 auto;
+  margin: 0 auto;
   background-color: var(--pi-inv-white);
   position: relative;
   /* ==== invoece to address */
