delete button added

--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -106,3 +106,9 @@ h4.from-title {
 .ncpi .pi-signature {
     margin-top: 70px;
 }
+
+.pi-inv .pi-sign  {
+    img {
+        max-width: 190px;
+    } 
+}
