--- a/src/admin/scss/invoice.scss
+++ b/src/admin/scss/invoice.scss
@@ -12,31 +12,36 @@
   line-height: 40px;
   color: #4A5568;
 }
+.ncpi .pi-badge-border {
+  border: 1px solid var(--text-color-red);
+  padding: 5px;
+  border-radius: 17px;
+  margin-bottom: 30px;
+  margin-top: 15px;
+}
+.ncpi .pi-badge-border.pi-green-color {
+  border: 1px solid var(--text-color-green);
+}
+.ncpi .pi-badge-border.pi-green-color .pi-badge-style-one {
+  border: 1px dashed var(--text-color-green);
+}
 .ncpi .pi-badge-style-one {
   padding: 15px;
-  border: 1px dotted var(--border-color-gray);
-  outline-style: 5px;
-  outline: 1px dashed #F16063;
-  outline-offset: 5px;
-  border-radius: 10px;
+  border: 1px dashed var(--text-color-red);
+  border-radius: 12px;
   text-align: center;
-  margin-bottom: 30px;
 }
 .ncpi .pi-badge-style-one h4 {
   font-size: 14px;
   font-weight: 700;
-  color: #F16063;
-  border-bottom: 2px solid #F16063;
+  color: var(--text-color-red);
+  border-bottom: 2px solid var(--text-color-red);
 }
 .ncpi .pi-badge-style-one p {
-  font-size: 10px;
+  font-size: 12px;
   margin-top: 5px;
   line-height: 15px;
-  color: #2D3748;
-}
-.ncpi .pi-green-color {
-  outline: 1px dashed #00A74D;
-  border: 1px dotted var(--border-color-gray);
+  color: var(--text-color-red);
 }
 .ncpi .pi-green-color h4 {
   font-size: 14px;
@@ -48,22 +53,24 @@
   color: #00A74D;
 }
 .ncpi .pi-badge-style-two {
-  padding: 15px 50px;
+  padding: 8px 50px;
   border: 1px solid var(--border-color-gray);
   margin-bottom: 10px;
 }
 .ncpi .pi-badge-style-two h4 {
   font-size: 14px;
   font-weight: 700;
-  color: #F16063;
-}
-.ncpi .pi-badge-style-two h4:hover {
-  color: #00A74D;
-  cursor: pointer;
+  color: var(--text-color-red);
 }
 .ncpi .pi-badge-style-two p {
-  font-size: 10px;
-  margin-top: -5px;
+  font-size: 12px;
+  margin-top: 0px;
   color: #2D3748;
   line-height: 15px;
+}
+
+.pi-inv .pi-sign  {
+  img {
+      max-width: 190px;
+  } 
 }
