--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -2856,11 +2856,20 @@ html {
   float: right;
   margin-top: 30px;
 }
-.ncpi .pi-pagination li.pi-previous a {
+.ncpi .pi-pagination .pi-disabled span {
+  cursor: not-allowed;
+  padding: 10px 15px;
+  border: 1px solid #cbd5e0;
+  margin-left: -1px;
+  font-size: 18px;
+  color: #4a5568;
+  font-weight: 500;
+}
+.ncpi .pi-pagination li.pi-previous span {
   border-radius: 8px;
   margin-right: 7px;
 }
-.ncpi .pi-pagination li.pi-next a {
+.ncpi .pi-pagination li.pi-next span {
   border-radius: 8px;
   margin-left: 7px;
 }
@@ -2878,7 +2887,7 @@ html {
   color: #4a5568;
   font-weight: 500;
 }
-.ncpi .pi-pagination li.pi-active,
+.ncpi .pi-pagination li a.pi-active,
 .ncpi .pi-pagination li a:hover {
   color: var(--text-color-blue) !important;
 }
@@ -3961,6 +3970,7 @@ body {
   }
 }
 
+.pi-social-icon:focus,
 input[type=text]:focus,
 input[type=email]:focus,
 input[type=url]:focus,
