--- a/src/admin/js/react/inv-template/scss/1.scoped.scss
+++ b/src/admin/js/react/inv-template/scss/1.scoped.scss
@@ -17,7 +17,7 @@
   background-color: var(--pi-inv-odd);
 }
 .pi-inv .pi-inv-one tr.pi-table-bg {
-  background-color: var(--pi-inv-secondary);
+  background-color: var(--pi-inv-primary);
   color: var(--pi-inv-white);
 }
 .pi-inv .pi-inv-one .pi-note-wrap {
