--- a/src/admin/js/react/inv-template/scss/all.scoped.scss
+++ b/src/admin/js/react/inv-template/scss/all.scoped.scss
@@ -280,3 +280,81 @@
     margin: 0 15px;
   }
 }
+
+
+.ncpi .pi-page-content {
+  max-width: 30%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.ncpi .pi-page-content p {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 40px;
+  color: #4A5568;
+}
+.ncpi .pi-badge-border {
+  border: 1px solid var(--text-color-red);
+  padding: 5px;
+  border-radius: 17px;
+  margin-bottom: 30px;
+  margin-top: 15px;
+}
+.ncpi .pi-badge-border.pi-green-color {
+  border: 1px solid var(--text-color-green);
+}
+.ncpi .pi-badge-border.pi-green-color .pi-badge-style-one {
+  border: 1px dashed var(--text-color-green);
+}
+.ncpi .pi-badge-style-one {
+  padding: 15px;
+  border: 1px dashed var(--text-color-red);
+  border-radius: 12px;
+  text-align: center;
+}
+.ncpi .pi-badge-style-one h4 {
+  font-size: 14px;
+  font-weight: 700;
+  color: var(--text-color-red);
+  border-bottom: 2px solid var(--text-color-red);
+}
+.ncpi .pi-badge-style-one p {
+  font-size: 12px;
+  margin-top: 5px;
+  line-height: 15px;
+  color: var(--text-color-red);
+}
+.ncpi .pi-green-color h4 {
+  font-size: 14px;
+  font-weight: 700;
+  color: #00A74D;
+  border-bottom: 2px solid #00A74D;
+}
+.ncpi .pi-green-color p {
+  color: #00A74D;
+}
+.ncpi .pi-badge-style-two {
+  padding: 8px 50px;
+  border: 1px solid var(--border-color-gray);
+  margin-bottom: 10px;
+}
+.ncpi .pi-badge-style-two h4 {
+  font-size: 14px;
+  font-weight: 700;
+  color: var(--text-color-red);
+}
+.ncpi .pi-badge-style-two p {
+  font-size: 12px;
+  margin-top: 0px;
+  color: #2D3748;
+  line-height: 15px;
+}
+
+.pi-inv .pi-sign  {
+  img {
+      max-width: 190px;
+  } 
+}
