--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -28,6 +28,7 @@
 }
 .ncpi .pi-info-logo img, .pi-inv .pi-from-logo img {
     max-width: 200px !important;
+    max-height: 80px;
 }
 //TODO: temporary css
 h4.from-title {
@@ -105,10 +106,21 @@ h4.from-title {
 }
 .ncpi .pi-signature {
     margin-top: 70px;
-}
-
+} 
 .pi-inv .pi-sign  {
+    margin-top: 30px;
     img {
         max-width: 190px;
+        max-height: 60px;
     } 
+}
+
+.pi-inv-sidebar-preview {
+    .pi-inv-feedback {
+        display: none;
+    }
+}
+
+.pi-inv .pi-bank-info {
+    font-size: 12px;
 }
