--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -1,7 +1,7 @@
 @import "partials/_main.scss";
- 
+
 #wpbody-content {
-    padding-bottom: 0; 
+    padding-bottom: 0;
 }
 
 //editor js
@@ -10,7 +10,15 @@
     max-height: 600px; //TODO: add a4 size later
     overflow: hidden;
 }
-.ce-block__content, .ce-toolbar__content { max-width:calc(100% - 80px) !important; } .cdx-block { max-width: 100% !important; } 
+
+.ce-block__content,
+.ce-toolbar__content {
+    max-width: calc(100% - 80px) !important;
+}
+
+.cdx-block {
+    max-width: 100% !important;
+}
 
 //invoice item radius without edit column
 .ncpi .pi-info-table-content .pi-info-table thead tr th:last-child {
@@ -22,37 +30,45 @@
     padding: 20px 30px 40px;
     height: auto !important;
 }
+
 .pi-field-desc {
     line-height: 1.4;
     margin-top: 2px;
 }
-.ncpi .pi-info-logo img, .pi-inv .pi-from-logo img {
+
+.ncpi .pi-info-logo img,
+.pi-inv .pi-from-logo img {
     max-width: 200px !important;
     max-height: 80px;
 }
+
 //TODO: temporary css
 h4.from-title {
     font-family: "Inter", sans-serif !important;
-} 
+}
 
 .ncpi .pi-popup-content {
     margin: 65px auto;
 }
+
 .ncpi .pi-form-style-two label {
     z-index: 99;
 }
-.ncpi-invoice-preview  {
-    border: 1px solid #dfdfdf; 
+
+.ncpi-invoice-preview {
+    border: 1px solid #dfdfdf;
     margin: auto;
     display: table;
 }
+
 .ncpi .pi-from-content .pi-from {
     margin-top: 10px;
-} 
+}
 
 .wp-admin .pi-left-sidebar {
     display: none;
 }
+
 .wp-admin .Toastify__toast-container.Toastify__toast-container--top-right {
     top: 3em;
 }
@@ -60,13 +76,16 @@ h4.from-title {
 .ncpi .pi-settings-tab .pi-settings-tabs .pi-tab {
     margin: 0;
 }
-.ncpi .pi-edit-content span { 
+
+.ncpi .pi-edit-content span {
     border: 3px solid #fff;
     box-shadow: 0 0 0 1px rgb(0 0 0 / 10%), inset 0 0 0 1px rgb(0 0 0 / 10%);
 }
+
 .ncpi .pi-style-color {
     display: flex;
     gap: 4px;
+
     span {
         width: 32px;
         height: 32px;
@@ -81,13 +100,16 @@ h4.from-title {
 //temporary form css 
 .ncpi .pi-field-logo-wrap {
     margin-top: 10px;
+
     .pi-field-logo {
         position: relative;
         display: inline-block;
+
         img {
             border-radius: 4px;
         }
     }
+
     .pi-field-logo-close {
         background: #fff;
         position: absolute;
@@ -104,15 +126,18 @@ h4.from-title {
         box-shadow: rgb(23 10 18 / 18%) 0px 0px 4px;
     }
 }
+
 .ncpi .pi-signature {
     margin-top: 70px;
-} 
-.pi-inv .pi-sign  {
+}
+
+.pi-inv .pi-sign {
     margin-top: 30px;
+
     img {
         max-width: 190px;
         max-height: 60px;
-    } 
+    }
 }
 
 .pi-inv-sidebar-preview {
@@ -133,4 +158,10 @@ h4.from-title {
 
 .ncpi .pi-table .pi-dropdown-content {
     top: 45px;
+}
+
+.pi-inv-preview {
+    .pi-inv {
+        height: auto !important;
+    }
 }
