--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -2321,6 +2321,7 @@ html {
   transform: scale(0.8);
   border: 1px solid #939393f0;
   box-shadow: none;
+  margin-top: 4px;
 }
 .ncpi .pi-table tr {
   border: 1px solid #cbd5e0;
@@ -2330,14 +2331,17 @@ html {
   cursor: pointer;
 }
 .ncpi .pi-table .pi-dropbtn {
-  padding: 7px 12px 2px;
+  padding: 7px 12px;
   position: relative;
   top: 2px;
   display: block;
   border-radius: 5px;
 }
-.ncpi .pi-table .pi-dropbtn:hover,
-.ncpi .pi-table .pi-dropbtn:focus {
+.ncpi .pi-table .pi-active {
+  background-color: #edf2f7;
+}
+.ncpi .pi-table .pi-active:hover,
+.ncpi .pi-table .pi-active:focus {
   background-color: #edf2f7;
 }
 .ncpi .pi-table .pi-dropdown {
@@ -2347,12 +2351,15 @@ html {
   display: none;
   position: absolute;
   background-color: #fff;
-  min-width: 160px;
-  box-shadow: 0 0 10px #dfdfdf;
+  min-width: 170px;
+  box-shadow: 0 0 4px 2px #dddddd6b;
   z-index: 1;
   right: 0;
-  top: 50px;
+  top: 40px;
   border-radius: 8px;
+}
+.ncpi .pi-table .pi-dropdown-content svg {
+  margin-right: 15px;
 }
 .ncpi .pi-table .pi-action-content {
   position: relative;
@@ -2360,12 +2367,15 @@ html {
 .ncpi .pi-table .pi-action-content button {
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }
 .ncpi .pi-table .pi-dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 13px 30px;
   text-decoration: none;
   display: block;
+  font-size: 14px;
+  font-weight: 500;
 }
 .ncpi .pi-table .pi-dropdown a:hover {
   background-color: #edf2f7;
@@ -2735,6 +2745,7 @@ html {
   border: 3px solid #edf2f7;
   border-radius: 15px 15px 0 0;
   border-bottom: 0;
+  height: 120px;
 }
 .ncpi .pi-add-item-main-content .pi-item-content .pi-add-item-text {
   margin-left: 20px;
@@ -2860,11 +2871,14 @@ html {
 }
 .ncpi .pi-pagination .pi-disabled span {
   cursor: not-allowed;
+  color: #4a5568;
+}
+.ncpi .pi-pagination .pi-next span,
+.ncpi .pi-pagination .pi-previous span {
   padding: 10px 15px;
   border: 1px solid #cbd5e0;
   margin-left: -1px;
   font-size: 18px;
-  color: #4a5568;
   font-weight: 500;
 }
 .ncpi .pi-pagination li.pi-previous span {
@@ -2923,6 +2937,9 @@ html {
   .wp-admin .pi-accordion-wrapper {
     margin-top: -190px;
   }
+}
+.wp-admin .pi-table input[type=checkbox] {
+  zoom: 1.2;
 }
 
 /*-------------------------------------------------------------- 
@@ -4381,7 +4398,7 @@ select {
     left: 235px;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 550px) {
   .ncpi .pi-menubar-icon {
     left: 235px;
   }
