fixed some issues

--- a/src/admin/js/react/inv-template/scss/3.scoped.scss
+++ b/src/admin/js/react/inv-template/scss/3.scoped.scss
@@ -21,7 +21,7 @@
 }
 .pi-inv .pi-inv-three .pi-top-shape .pi-shape2 {
   position: absolute;
-  top: 8px;
+  bottom: -135px;
   left: -36px;
   z-index: 10;
 }
