fixed some issues

--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -2369,6 +2369,7 @@ html {
   position: relative;
 }
 .ncpi .pi-table .pi-action-content button {
+  background-color: transparent;
   border: none;
   cursor: pointer;
   padding: 6px 10px;
