--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -53,7 +53,7 @@ h4.from-title {
 
 .ncpi .pi-form-style-two label {
     z-index: 99;
-} 
+}
 
 .ncpi .pi-from-content .pi-from {
     margin-top: 10px;
@@ -148,7 +148,7 @@ h4.from-title {
 .ncpi .pi-right-content {
     overflow: inherit;
     height: auto;
-} 
+}
 
 .pi-inv-preview-wrap {
     border: 1px solid #dfdfdf;
@@ -158,6 +158,11 @@ h4.from-title {
 
 .pi-inv-hidden-preview {
     .pi-inv {
-      height: auto !important;
+        height: auto !important;
     }
+}
+
+//tiny mce editor 
+.tox-statusbar__branding {
+    display: none;
 }
