fixed some issues

--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -163,6 +163,6 @@ h4.from-title {
 }
 
 //tiny mce editor 
-.tox-statusbar__branding {
-    display: none;
-}
+/* .mce-content-body {
+    font-family: Inter, sans-serif !important;
+} */
