--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -166,3 +166,62 @@ h4.from-title {
 /* .mce-content-body {
     font-family: Inter, sans-serif !important;
 } */
+
+// switch css
+.pi-switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 24px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .pi-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The pi-switch-slider */
+  .pi-switch-slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+  }
+  
+  .pi-switch-slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: 0.4s;
+  }
+  
+  input:checked + .pi-switch-slider {
+    background-color: #4c6fff;
+  }
+  
+  input:focus + .pi-switch-slider {
+    box-shadow: 0 0 1px #4c6fff;
+  }
+  
+  input:checked + .pi-switch-slider:before {
+    transform: translateX(26px);
+  }
+  
+  /* Rounded pi-switch-sliders */
+  .pi-switch-slider.round {
+    border-radius: 34px;
+  }
+  
+  .pi-switch-slider.round:before {
+    border-radius: 50%;
+  }
