--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1966,6 +1966,33 @@ html {
 .ncpi .pi-popup-style-small {
   width: 25% !important;
 }
+.ncpi .pi-popup-sidebar {
+  float: right;
+  margin: 0;
+  border-radius: 0px;
+}
+.ncpi .pi-popup-sidebar .pi-content {
+  padding: 20px 25px 15px;
+}
+.ncpi .pi-popup-sidebar .pi-close {
+  top: 35%;
+  left: -55px;
+}
+.ncpi .pi-popup-sidebar .pi-popup-btn {
+  margin-top: 70px;
+}
+.ncpi .pi-popup-sidebar .pi-title-field {
+  font-size: 24px !important;
+  font-weight: 500;
+  padding: 13px 20px !important;
+}
+.ncpi .pi-popup-sidebar .pi-deal-atage {
+  width: auto;
+  margin-left: 15px;
+  font-size: 11px;
+  color: #F68A0B;
+  margin-bottom: 15px;
+}
 
 /*-------------------------------------------------------------- 
 # tabs
@@ -2442,6 +2469,7 @@ html {
   border-bottom: 3px solid #f7f8fa;
   color: #718096;
   cursor: pointer;
+  margin: 0;
 }
 .ncpi .pi-settings-horizontal-tab .pi-tab.pi-active {
   border-bottom: 3px solid var(--bg-color-blue);
