--- a/src/admin/js/react/components/proposal/single/style.scoped.scss
+++ b/src/admin/js/react/components/proposal/single/style.scoped.scss
@@ -59,7 +59,7 @@
   color: var(--bg-color-black);
   margin-top: 10px;
 }
-.ncpi .pi-invoice-tab-content .pi-popup-content {
+.ncpi .pi-invoice-tab-content .pi-modal-content {
   margin: 75px auto;
 }
 
