--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -48,7 +48,7 @@ h4.from-title {
     font-family: "Inter", sans-serif !important;
 }
 
-.ncpi .pi-popup-content {
+.ncpi .pi-modal-content {
     margin: 65px auto;
 }
 
@@ -237,85 +237,5 @@ input:checked+.pi-switch-slider:before {
         -webkit-box-pack: center!important;
         -ms-flex-pack: center!important;
         justify-content: center!important;
-    }
-}
-
-
-//field range
-
-
-.pi-field-range {
-        
-    input[type="range"] { 
-        margin: auto;
-        -webkit-appearance: none;
-        position: relative;
-        overflow: hidden;
-        height: 15px;
-        width: 100%;
-        cursor: pointer;
-        border-radius: 0; /* iOS */
-    }
-
-    ::-webkit-slider-runnable-track {
-        background: #ddd;
-    }
-
-    /*
-    * 1. Set to 0 width and remove border for a slider without a thumb
-    */
-    ::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        width: 20px; /* 1 */
-        height: 15px;
-        background: #fff;
-        box-shadow: -100vw 0 0 100vw dodgerblue;
-        border: 2px solid #999; /* 1 */
-    }
-
-    ::-moz-range-track {
-        height: 15px;
-        background: #ddd;
-    }
-
-    ::-moz-range-thumb {
-        background: #fff;
-        height: 15px;
-        width: 20px;
-        border: 3px solid #999;
-        border-radius: 0 !important;
-        box-shadow: -100vw 0 0 100vw #4e6de9;
-        box-sizing: border-box;
-    }
-
-    ::-ms-fill-lower { 
-        background: #4e6de9;
-    }
-
-    ::-ms-thumb { 
-        background: #fff;
-        border: 2px solid #999;
-        height: 15px;
-        width: 20px;
-        box-sizing: border-box;
-    }
-
-    ::-ms-ticks-after { 
-        display: none; 
-    }
-
-    ::-ms-ticks-before { 
-        display: none; 
-    }
-
-    ::-ms-track { 
-        background: #ddd;
-        color: transparent;
-        height: 15px;
-        border: none;
-    }
-
-    ::-ms-tooltip { 
-        display: none;
     }
 } 
