--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -1,8 +1,3 @@
-.ncpi {
-  /* width */
-  /* Track */
-  /* Handle */
-}
 .ncpi .pi-lead-name-content {
   background-color: #fff;
   padding: 30px;
@@ -64,12 +59,38 @@
   border-top: none;
   border-radius: 0 0 8px 8px;
 }
+@media screen and (max-width: 820px) {
+  .ncpi .pi-tag-content {
+    display: inline-block;
+  }
+}
 .ncpi .pi-tag-content ul {
   display: flex;
   margin: 0;
 }
+@media screen and (max-width: 820px) {
+  .ncpi .pi-tag-content ul {
+    display: inherit;
+  }
+}
 .ncpi .pi-tag-content ul li {
   margin-right: 40px;
+}
+@media screen and (max-width: 820px) {
+  .ncpi .pi-tag-content ul li {
+    width: 50%;
+    float: left;
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+}
+@media screen and (max-width: 820px) {
+  .ncpi .pi-tag-content ul li {
+    width: 100%;
+  }
+  .ncpi .pi-tag-content ul li:last-child {
+    margin-bottom: 0;
+  }
 }
 .ncpi .pi-tag-content ul select {
   border: 1px solid #dddddda8;
@@ -138,6 +159,7 @@
   display: flex;
   overflow-x: scroll;
   margin-top: 30px;
+  height: calc(100vh - 235px);
 }
 .ncpi .pi-board-column {
   margin-right: 20px;
@@ -187,7 +209,6 @@
   border: 1px solid #dddddda8;
   border-radius: 8px;
   margin-bottom: 15px;
-  margin-top: 15px;
 }
 .ncpi .pi-board-column .pi-board-column-item .pi-board-item-top {
   padding: 15px;
@@ -227,14 +248,6 @@
 .ncpi .pi-broad-content {
   overflow-y: scroll;
   width: 235px;
-  height: 300px;
-}
-.ncpi ::-webkit-scrollbar {
-  width: 5px;
-}
-.ncpi ::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-.ncpi ::-webkit-scrollbar-thumb {
-  background: #cac7c7;
+  height: 89%;
+  padding: 15px 10px;
 }
