--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1202,6 +1202,21 @@ html {
 /*-------------------------------------------------------------- 
 # crid
 --------------------------------------------------------------*/
+.ncpi {
+  /* Scrollbar */
+  /* Track */
+  /* Handle */
+}
+.ncpi ::-webkit-scrollbar {
+  width: 5px;
+  height: 10px;
+}
+.ncpi ::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+.ncpi ::-webkit-scrollbar-thumb {
+  background: #cac7c7;
+}
 .ncpi .pi-logo-content img {
   width: 36px;
   height: 36px;
@@ -1221,7 +1236,7 @@ html {
 .ncpi .pi-width-content {
   max-width: 1280px;
   margin: auto;
-  padding: 15px 70px;
+  padding: 15px 55px;
 }
 @media screen and (max-width: 820px) {
   .ncpi .pi-width-content {
@@ -1229,9 +1244,11 @@ html {
   }
 }
 .ncpi .pi-top-menu-content {
-  width: 100%;
+  position: fixed;
+  width: calc(100vw - 230px);
   z-index: 9;
   background-color: #fff;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.06);
 }
 @media screen and (max-width: 992px) {
   .ncpi .pi-top-menu-content {
@@ -1289,7 +1306,7 @@ html {
 .ncpi .pi-right-content .pi-right-content-data {
   max-width: 1280px;
   margin: auto;
-  padding: 40px 70px;
+  padding: 110px 70px;
 }
 @media screen and (max-width: 820px) {
   .ncpi .pi-right-content .pi-right-content-data {
@@ -1687,6 +1704,8 @@ html {
 }
 .ncpi .pi-dropdown {
   position: relative;
+  margin-left: auto;
+  margin-right: 30px;
 }
 .ncpi .pi-dropdown img {
   margin-right: 10px;
@@ -1813,7 +1832,7 @@ html {
 }
 
 /*-------------------------------------------------------------- 
-# popup
+# modal
 --------------------------------------------------------------*/
 .ncpi .pi-overlay {
   position: fixed;
@@ -1839,64 +1858,82 @@ html {
   overflow-x: hidden;
   overflow-y: auto;
 }
-.ncpi .pi-popup-content {
+.ncpi .pi-modal-medium {
+  width: 600px;
+}
+.ncpi .pi-modal-small {
+  width: 400px;
+}
+.ncpi .pi-modal-small .row {
+  display: block;
+}
+.ncpi .pi-modal-small .row .col-lg {
+  width: 100%;
+}
+.ncpi .pi-modal-small .pi-modal-footer .row {
+  display: flex;
+}
+.ncpi .pi-modal-content {
   margin: 30px auto;
   background: #fff;
   border-radius: 25px;
   position: relative;
   max-width: 760px;
 }
-.ncpi .pi-popup-content .pi-form-style-one .row > div {
+.ncpi .pi-modal-content .pi-form-style-one .row > div {
   margin-bottom: 15px;
 }
-.ncpi .pi-popup-content .pi-form-style-two select,
-.ncpi .pi-popup-content .pi-form-style-two input[type=number],
-.ncpi .pi-popup-content .pi-form-style-two input[type=url],
-.ncpi .pi-popup-content .pi-form-style-two input[type=email],
-.ncpi .pi-popup-content .pi-form-style-two input[type=text] {
+.ncpi .pi-modal-content .pi-form-style-two select,
+.ncpi .pi-modal-content .pi-form-style-two input[type=number],
+.ncpi .pi-modal-content .pi-form-style-two input[type=url],
+.ncpi .pi-modal-content .pi-form-style-two input[type=email],
+.ncpi .pi-modal-content .pi-form-style-two input[type=text] {
   margin-top: 0;
   padding: 8px;
   margin-bottom: 10px;
 }
-.ncpi .pi-popup-content .pi-modal-header {
+.ncpi .pi-modal-content .pi-modal-header {
   position: relative;
   border-radius: 25px 25px 0 0;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.06);
   padding: 45px;
   background-color: #f8f8fa !important;
 }
-.ncpi .pi-popup-content .pi-modal-header p {
+.ncpi .pi-modal-content .pi-modal-header p {
   margin: 0;
   padding-top: 12px;
 }
-.ncpi .pi-popup-content .pi-modal-title {
+.ncpi .pi-modal-content .pi-modal-title {
   font-size: 24px;
   font-weight: 700;
   text-transform: capitalize;
 }
-.ncpi .pi-popup-content .pi-content {
+.ncpi .pi-modal-content .pi-content {
   overflow: auto;
   padding: 30px 45px 45px;
 }
 @media screen and (max-width: 550px) {
-  .ncpi .pi-popup-content .pi-content {
+  .ncpi .pi-modal-content .pi-content {
     padding: 5px 20px 20px;
   }
 }
-.ncpi .pi-popup-content .pi-content .pi-popup-btn .pi-btn {
+.ncpi .pi-modal-content .pi-modal-footer {
+  padding: 0 45px 45px;
+}
+.ncpi .pi-modal-content .pi-modal-footer .pi-btn {
   background-color: #fff;
   color: #4A5568;
   margin-left: -20px;
 }
-.ncpi .pi-popup-content .pi-content .pi-popup-btn .pi-btn {
+.ncpi .pi-modal-content .pi-modal-footer .pi-btn {
   text-transform: capitalize;
   font-size: 14px;
   border-radius: 10px !important;
 }
-.ncpi .pi-popup-content .pi-form-style-two .pi-btn {
+.ncpi .pi-modal-content .pi-form-style-two .pi-btn {
   margin-bottom: 35px;
 }
-.ncpi .pi-popup-content .pi-close {
+.ncpi .pi-modal-content .pi-close {
   background: #fff;
   position: absolute;
   top: 50%;
@@ -1911,13 +1948,13 @@ html {
   box-shadow: rgba(136, 138, 141, 0.18) 0px 0px 4px;
   transform: translateY(-50%);
 }
-.ncpi .pi-popup-content .pi-close svg path {
+.ncpi .pi-modal-content .pi-close svg path {
   fill: #CBD5E0;
 }
-.ncpi .pi-popup-content .pi-close:hover {
+.ncpi .pi-modal-content .pi-close:hover {
   color: #4e6de9;
 }
-.ncpi .pi-popup-content .pi-form-checkbox label {
+.ncpi .pi-modal-content .pi-form-checkbox label {
   top: -1px !important;
   left: 5px !important;
   font-size: 14px !important;
@@ -1926,14 +1963,14 @@ html {
   color: #1a202c !important;
   text-transform: capitalize;
 }
-.ncpi .pi-popup-content .pi-form-style-two label {
+.ncpi .pi-modal-content .pi-form-style-two label {
   top: 9px;
 }
 @media screen and (max-width: 700px) {
   .ncpi .pi-modal-box {
     width: 70%;
   }
-  .ncpi .pi-popup-content {
+  .ncpi .pi-modal-content {
     width: 70%;
   }
 }
@@ -1960,38 +1997,134 @@ html {
   cursor: pointer;
   font-size: 14px;
 }
-.ncpi .pi-popup-style-big {
+.ncpi .pi-modal-style-big {
   width: 50% !important;
 }
-.ncpi .pi-popup-style-small {
+.ncpi .pi-modal-style-small {
   width: 25% !important;
 }
-.ncpi .pi-popup-sidebar {
+.ncpi .pi-modal-content.pi-modal-sidebar .row > div {
+  margin-bottom: 25px;
+}
+.ncpi .pi-modal-sidebar {
   float: right;
   margin: 0;
   border-radius: 0px;
 }
-.ncpi .pi-popup-sidebar .pi-content {
-  padding: 20px 25px 15px;
+@media screen and (max-width: 992px) {
+  .ncpi .pi-modal-sidebar {
+    max-width: 430px;
+  }
 }
-.ncpi .pi-popup-sidebar .pi-close {
+.ncpi .pi-modal-sidebar .pi-modal-header {
+  padding: 45px 25px;
+}
+@media screen and (max-width: 992px) {
+  .ncpi .pi-modal-sidebar .pi-modal-header {
+    padding: 25px;
+  }
+}
+.ncpi .pi-modal-sidebar .pi-content {
+  padding: 20px 35px 15px;
+  height: calc(100vh - 246px);
+}
+@media screen and (max-width: 992px) {
+  .ncpi .pi-modal-sidebar .pi-content {
+    padding: 20px 40px 15px 25px;
+  }
+}
+.ncpi .pi-modal-sidebar .pi-close {
   top: 35%;
   left: -55px;
 }
-.ncpi .pi-popup-sidebar .pi-popup-btn {
-  margin-top: 70px;
+@media screen and (max-width: 992px) {
+  .ncpi .pi-modal-sidebar .pi-close {
+    top: 45%;
+  }
 }
-.ncpi .pi-popup-sidebar .pi-title-field {
+.ncpi .pi-modal-sidebar .pi-modal-footer {
+  margin-top: 50px;
+  padding: 0px 45px 5px;
+}
+@media screen and (max-width: 992px) {
+  .ncpi .pi-modal-sidebar .pi-modal-footer {
+    margin-top: 30px;
+  }
+}
+.ncpi .pi-modal-sidebar .pi-modal-footer .pi-btn {
+  margin-left: -35px;
+}
+.ncpi .pi-modal-sidebar .pi-title-field {
   font-size: 24px !important;
   font-weight: 500;
   padding: 13px 20px !important;
 }
-.ncpi .pi-popup-sidebar .pi-deal-atage {
+.ncpi .pi-modal-sidebar .pi-deal-atage {
   width: auto;
   margin-left: 15px;
   font-size: 11px;
   color: #F68A0B;
-  margin-bottom: 15px;
+  margin-top: 0;
+}
+.ncpi input[type=range] {
+  position: relative;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  display: block;
+  width: 100%;
+  height: 8px;
+  background-color: #CCD6FF !important;
+  margin-top: 10px;
+  outline: none;
+}
+.ncpi input[type=range]::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  height: 8px;
+}
+.ncpi input[type=range]::-moz-track {
+  -moz-appearance: none;
+  height: 8px;
+}
+.ncpi input[type=range]::-ms-track {
+  appearance: none;
+  height: 8px;
+}
+.ncpi input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 5px;
+  background-color: #3264fe;
+  cursor: pointer;
+  margin-top: -6px;
+  border: none;
+}
+.ncpi input[type=range]::-moz-range-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 10px;
+  background-color: #3264fe;
+  cursor: pointer;
+  margin-top: -6px;
+  border: none;
+}
+.ncpi input[type=range]::-ms-thumb {
+  appearance: none;
+  height: 20px;
+  width: 10px;
+  background-color: #3264fe;
+  cursor: pointer;
+  margin-top: -6px;
+  border: none;
+}
+.ncpi input[type=range]:active::-webkit-slider-thumb {
+  background-color: #ffffff;
+  border: 3px solid #3264fe;
+}
+.ncpi #slider-value {
+  position: absolute;
+  color: #000;
+  right: 14px;
+  top: 0px;
 }
 
 /*-------------------------------------------------------------- 
@@ -3462,7 +3595,7 @@ select {
   position: fixed;
   z-index: 9;
   background: #fff;
-  width: 239px;
+  width: 250px;
   border-bottom: 1px solid #dddddd36;
 }
 @media screen and (max-width: 768px) {
