before change company_name

--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -3353,7 +3353,7 @@ select {
   width: 100%;
   border: 1px solid #CBD5E0;
   outline: none;
-  line-height: 1px;
+  line-height: 1;
 }
 .ncpi .pi-form-style-one select:focus,
 .ncpi .pi-form-style-one input[type=url]:focus,
